// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input changes its value 1`] = `
<Input
  type="Text"
  value="value A"
>
  <input
    autoFocus={true}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="Text"
    value="value B"
  />
</Input>
`;

exports[`Input normally 1`] = `
<Input
  type="Text"
  value="value A"
>
  <input
    autoFocus={true}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="Text"
    value="value A"
  />
</Input>
`;
